--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier": "prettier . --write"
   },
   "dependencies": {
+    "@flaticon/flaticon-uicons": "^3.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -20,7 +21,9 @@
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-loaders": "^3.0.1",
+    "react-parallax-tilt": "^1.7.226",
     "react-router": "^6.23.0",
     "react-router-dom": "^6.23.0",
     "sass": "^1.75.0"
