--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "animate.css": "^4.1.1",
     "emailjs": "^4.0.3",
     "loaders.css": "^0.1.2",
+    "nuka-carousel": "^8.0.1",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
