--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "animate.css": "^4.1.1",
     "emailjs": "^4.0.3",
+    "firebase": "^10.12.1",
     "loaders.css": "^0.1.2",
     "nuka-carousel": "^8.0.1",
     "prettier": "^3.2.5",
