--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "animate.css": "^4.1.1",
     "emailjs": "^4.0.3",
     "firebase": "^10.12.1",
+    "helmet": "^7.1.0",
     "loaders.css": "^0.1.2",
     "nuka-carousel": "^8.0.1",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
     "react-loaders": "^3.0.1",
